--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,9 @@
                         <goals>
                             <goal>shade</goal>
                         </goals>
+                        <configuration>
+                            <outputFile>C:\Users\swapn\IdeaProjects\drunk_minecraft\server\plugins\DrunkMinecraft.jar</outputFile>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -59,6 +62,10 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -67,6 +74,16 @@
             <artifactId>spigot-api</artifactId>
             <version>1.21.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.amnoah</groupId>
+            <artifactId>sharkbyte-scoreboard</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.mrmicky</groupId>
+            <artifactId>fastboard</artifactId>
+            <version>2.1.3</version>
         </dependency>
     </dependencies>
 </project>
